fix(style): no horizontal scroll on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,6 +61,10 @@ html {
   box-sizing: border-box;
 }
 
+body {
+  width: 100%;
+}
+
 *,
 *:before,
 *:after {
